# hamrs-ca

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  demo-concept.tape  demo-drill.tape  demo-morse.tape  demo.tape
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
amat_basic_quest/: lisezmoi_base.txt  readme_basic.txt
content/: B-001-001.md  B-001-002.md  B-001-003.md  B-001-004.md  B-001-005.md  B-001-006.md  B-001-007.md  B-001-008.md  B-001-009.md  B-001-010.md  B-001-011.md  B-001-012.md  B-001-013.md  B-001-014.md  B-001-015.md  B-001-016.md  B-001-017.md  B-001-018.md  B-001-019.md  B-001-020.md  B-001-021.md  B-001-022.md  B-001-023.md  B-001-024.md  B-001-025.md  B-002-001.md  B-002-002.md  B-002-003.md  B-002-004.md  B-002-005.md  B-002-006.md  B-002-007.md  B-002-008.md  B-002-009.md  B-003-001.md  B-003-002.md  B-003-003.md  B-003-004.md  B-003-005.md  B-003-006.md  (+60 more)
src/: content.rs  main.rs  morse.rs
src/ai/: mod.rs
src/db/: mod.rs
src/modes/: bands.rs  concept.rs  drill.rs  exam.rs  mod.rs  morse.rs
src/questions/: mod.rs
src/tui/: drill.rs  mod.rs  morse.rs  quiz.rs
