[package]
name = "hamrs-ca"
version = "0.1.0"
edition = "2021"
description = "CLI study tool for the Canadian Amateur Radio Basic Qualification exam"
license = "MIT"

[[bin]]
name = "hamrs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
rand = "0.8"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termimad = "0.23"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
