[package]
name = "hamrs-ca"
version = "0.9.4"
edition = "2021"
description = "CLI study tool for the Canadian Amateur Radio Basic Qualification exam"
license = "MIT"

[[bin]]
name = "hamrs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
rand = "0.9"
rodio = { version = "0.17", default-features = false }
ratatui = "0.30"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
rusqlite = { version = "0.39", features = ["bundled"] }
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termimad = "0.34"
toml = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
